Minor: Caching and Usability Fixes
Add .htaccess to directories with caching instructions for the main
website (these files do nothing for Neocities and do not work on the
mirror). Also set the custom font to "swap" mode so the text is not
invisible while the font is loading.

--- a/src/style/mew.scss
+++ b/src/style/mew.scss
@@ -1,6 +1,7 @@
 @font-face {
   font-family: "W95FA";
   src: url("fontz/w95fa.woff");
+  font-display: swap;
 }
 
 html {
